# pyoverview

./: .gitignore  README.md  pyproject.toml
src/outliner/: __init__.py  cli.py  outline.py  tui.py
src/pyoverview/: __init__.py  cli.py  outline.py  syntax.py  tui.py
tests/: test_outline.py  test_syntax.py
