[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoverview"
version = "0.4.1"
description = "A two-pane terminal outline browser for Python modules."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Alex Dong" }]
keywords = ["ast", "code", "outline", "tui", "tree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alexdong/pyoverview"
Repository = "https://github.com/alexdong/pyoverview"
Issues = "https://github.com/alexdong/pyoverview/issues"

[project.scripts]
pyoverview = "pyoverview.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
